force-app/main/default/objects/Major_Details__c/Major_Details__c.object-meta.xml
<CustomObject>
    <label>Major</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Major Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Major</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>