force-app/main/default/objects/Major_Details__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>Course</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>