force-app/main/default/objects/Major_Details__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <label>ID Number</label>
    <referenceTo>ID_Number__c</referenceTo>
    <relationshipLabel>Major</relationshipLabel>
    <relationshipName>Major</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>