force-app/main/default/objects/Major_Details__c/fields/Major_Details__c.field-meta.xml
<CustomField>
    <fullName>Major_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major</label>
    <referenceTo>Major_Details__c</referenceTo>
    <relationshipLabel>Major</relationshipLabel>
    <relationshipName>Major</relationshipName>
    <type>Lookup</type>
</CustomField>